--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "customize-cra": "^0.9.1",
     "dotenv": "^8.2.0",
     "eruda": "^2.2.2",
-    "food-blogger-bridge": "git+ssh://git@github.com/devnaumov/food-blogger-bridge.git",
+    "marathon-bridge": "git+ssh://git@github.com:RetiredBluesweater/marathon-bridge.git",
     "history": "^4.10.1",
     "qs": "^6.9.4",
     "react": "^16.13.1",
@@ -51,8 +51,8 @@
   "scripts": {
     "check-env:dev": "cross-env DEPLOY_ENV=development.local node prebuild.js",
     "check-env:prod": "cross-env DEPLOY_ENV=production node prebuild.js",
-    "schema": "rimraf src/types/gql && gql-types-generator --operations src/types/gql-operations/**/*.graphql --display as-is --scalars \"{\\\"DateTime\\\": \\\"Date\\\"}\" --output-directory src/types/gql --operations-wrap node_modules/food-blogger-bridge/src/*.graphql",
-    "upgrade-schema": "npm update food-blogger-bridge && npm run schema",
+    "schema": "rimraf src/types/gql && gql-types-generator --operations src/types/gql-operations/**/*.graphql --display as-is --scalars \"{\\\"DateTime\\\": \\\"Date\\\"}\" --output-directory src/types/gql --operations-wrap node_modules/marathon-bridge/src/*.graphql",
+    "upgrade-schema": "npm update marathon-bridge && npm run schema",
     "start:http": "npm  check-env:dev && cross-env PORT=10889 react-app-rewired start",
     "start:https": "npm  run check-env:dev && cross-env HTTPS=true PORT=10888 react-app-rewired start",
     "tunnel": "ngrok http --region eu 10889",
@@ -98,6 +98,7 @@
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.18.3",
     "gql-types-generator": "^1.4.10",
+    "@vkontakte/vk-tunnel": "^0.0.12",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.2",
     "ngrok": "^3.2.7",
